# hmm

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  setup.sh
examples/: apprx.cc  ldtmc.h  logger.h  reduction.cc  reduction.cpp  simulation.cc
experiment/: reduction.cpp
experiment/data/: label_trace_100_abnormal.txt  label_trace_100_normal.txt
include/: discrete_hmm.hpp  dtmc.h  dtmc.hpp  hmm.h  hmm.hpp  label_trace.h  markov.h  markov.hpp  mc_random.hpp  pchheader.hpp  trace.h
src/: discrete_trace.cpp  dtmc.cc  dtmc.cpp  hmm.cc  hmm.cpp  labelled_dtmc.cc  markov_random.cc  mc_random.cpp
test/: test_bawe.cpp  test_hmm.cpp  test_mc_random.cpp
